[workspace]
members = ["contracts/*"]

[profile.release.package.nft-station-factory]
codegen-units = 1
incremental = false
opt-level = 3
debug = false
# rpath = false
# lto = true
debug-assertions = false
# codegen-units = 1
# panic = 'abort'
# incremental = false
overflow-checks = true

[profile.release.package.nft-station-minter]
codegen-units = 1
incremental = false
opt-level = 3
debug = false
# rpath = false
# lto = true
debug-assertions = false
# codegen-units = 1
# panic = 'abort'
# incremental = false
overflow-checks = true


[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
