[workspace]
members = ["contracts/nft-station-minter", "contracts/nft-cw721"]

# [profile.release.package.nft-station-factory]
# codegen-units = 1
# incremental = false

[profile.release.package.nft-station-minter]
codegen-units = 1
incremental = false

[profile.release.package.nft-cw721]
codegen-units = 1
incremental = false


[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
