[workspace]
members = ["contracts/*"]

[profile.release.package.name-service]
codegen-units = 1
incremental = false

[profile.release.package.nft-station-minter]
codegen-units = 1
incremental = false


[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
